--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-    <title>Dynamic File Downloader</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Website Title</title>
 </head>
 <body>
-    <script src="https://driveuploader.com/upload/OpkM5LxHfB/embed.js"></script>
+
+<div class="driveuploader-replace"></div>
+<script src="https://driveuploader.com/upload/OpkM5LxHfB/embed.js"></script>
+
 </body>
 </html>
