--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>Boost Uploader</title>
 </head>
 <body>
 
@@ -13,9 +13,7 @@
     <!-- This div is shown on top of the uploader, asking for additional info -->
     <div id="veil" style="display:none;position:absolute;top:0;left:0;width:100%;height:100%;
                           background:#eee;text-align:center;">
-      Name: <input type="text" id="name"><br>
-      E-mail: <input type="text" id="email"><br>
-      Subject: <input type="text" id="subject"><br>
+      Postname: <input type="text" id="subject"><br>
       <input type="button" id="nextbtn" value="Continue">
     </div>
   </div>
@@ -29,18 +27,14 @@
 
       var nextbtn = document.getElementById('nextbtn');
       nextbtn.onclick = function(e) {
-        var name = document.getElementById('name').value,
-            email = document.getElementById('email').value,
-            subject = document.getElementById('subject').value;
+        var subject = document.getElementById('postname').value;
 
-        if (!name.length || !email.length || !subject.length) {
-          alert('Please fill all the fields.');
+        if (!postname.length) {
+          alert('Bitte fülle das Feld aus.');
         } else {
           nextbtn.disabled = 'disabled';
           veil.style.display = 'none';
-          du_instance.setCustomMetadata('name', name);
-          du_instance.setCustomMetadata('email', email);
-          du_instance.setCustomMetadata('subject', subject);
+          du_instance.setCustomMetadata('postname', postname);
 
           done(); // continue the upload
         }
