--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- This div is shown on top of the uploader, asking for additional info -->
     <div id="veil" style="display:none;position:absolute;top:0;left:0;width:100%;height:100%;
                           background:#eee;text-align:center;">
-      Postname: <input type="text" id="subject"><br>
+      Postname: <input type="text" id="postname"><br>
       <input type="button" id="nextbtn" value="Continue">
     </div>
   </div>
